--- a/index.html
+++ b/index.html
@@ -1,46 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home | REJOUICE®</title>
-    <link rel="shortcut icon" href="/img/favicon-32x32.png" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div id="main">
-        <div id="page-1">
-            <div id="cursor"><h5>Play Reel</h5></div>
-            <video autoplay loop muted src="/video/658ef98d531ac2845a270509_RJ-2-0-Videobackground_compressed.mp4"></video>
-            <div id="page1-part1">
-            <div id="nav">
-                <h3>The Venture Agency.</h3>
-                <h4>Menu</h4>
-            </div>
-            <div id="page-1heading">
-                <h1>rejouice</h1>
-            </div>
-            </div>
-        </div>
-        <div id="page-2">
-            <div id="page2-part1">
-                <div id="page2-top">
-                    <h2>Strategy. Design. Development. <br>Two engagement models.</h2>
-                    <h2>Paris / San Diego</h2>
-                </div>
-                <div id="page2-bottom">
-                    <h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;We are a digital brand accelerator for fast-growing companies. Our mission is to transform founders' visions into remarkable brands. All our clients drive their businesses with sustainability at the forefront. Choose traditional compensation or an equity offset of up to 50% of our fees through our Venture Model—your vision, your decision.&nbsp;In any case, we are your new unfair advantage.<br><br></h2>
 
-                </div>
-            </div>
+    <link
+      rel="shortcut icon"
+      href="/img/favicon-32x32.png"
+      type="image/x-icon"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+
+  <body>
+    <div id="main">
+      <div id="page-1">
+        <div id="cursor"><h5>Play Reel</h5></div>
+        <video
+          autoplay
+          loop
+          muted
+          src="/video/658ef98d531ac2845a270509_RJ-2-0-Videobackground_compressed.mp4"
+        ></video>
+        <div id="page1-part1">
+          <nav id="nav">
+            <h3>The Venture Agency.</h3>
+            <h4>Menu</h4>
+          </nav>
+          <div id="page-1heading">
+            <h1>rejouice</h1>
+          </div>
         </div>
-        <div id="page-3"></div>
+      </div>
+      <div id="page-2">
+        <div id="page2-part1">
+          <div id="page2-top">
+            <h2>Strategy. Design. Development. <br />Two engagement models.</h2>
+            <h2>Paris / San Diego</h2>
+          </div>
+          <div id="page2-bottom">
+            <h2>
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;We are a digital
+              brand accelerator for fast-growing companies. Our mission is to
+              transform founders' visions into remarkable brands. All our
+              clients drive their businesses with sustainability at the
+              forefront. Choose traditional compensation or an equity offset of
+              up to 50% of our fees through our Venture Model—your vision, your
+              decision.&nbsp;In any case, we are your new unfair advantage.<br /><br />
+            </h2>
+          </div>
+        </div>
+      </div>
+      <div id="page-3"></div>
+      <div id="page-4"></div>
+      <div id="hamburger">
+        <div id="hamburger-main"></div>
+      </div>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js" integrity="sha512-onMTRKJBKz8M1TnqqDuGBlowlH0ohFzMXYRNebz+yOcc5TQr/zAKsthzhuv0hiyUKEiQEQXEynnXCvNTOk50dg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
+      integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"
+      integrity="sha512-onMTRKJBKz8M1TnqqDuGBlowlH0ohFzMXYRNebz+yOcc5TQr/zAKsthzhuv0hiyUKEiQEQXEynnXCvNTOk50dg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
     <script src="/script.js"></script>
-</body>
+  </body>
 </html>
