--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     />
     <link
       rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
+    <link
+      rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css"
     />
     <link rel="stylesheet" href="style.css" />
@@ -56,13 +60,132 @@
           </div>
         </div>
       </div>
-      <div id="page-3"></div>
-      <div id="page-4"></div>
+      <div id="page-3">
+        <div id="page3-top">
+          <h4>Agency & Venture <span>Models</span> &nbsp; &nbsp;↴</h4>
+          <h2>Explore our services</h2>
+          <h2>and engagement models</h2>
+        </div>
+        <div id="page3-bottom">
+          <div id="p3-top">
+            <h2>Transforming visions into brands.</h2>
+            <h2>↳ &nbsp; &nbsp; See the work</h2>
+          </div>
+          <div id="p3-bottom">
+            <div class="elem">
+              <img
+                src="/img/2874f084-ec6c-4a19-b025-a55c1e6db929_Group+3692.avif"
+                alt=""
+              /><video
+                autoplay
+                loop
+                muted
+                src="/video/Website-homepage-Work-01_1.mp4"
+              ></video>
+            </div>
+            <div class="elem">
+              <img
+                src="/img/d8e1fa1f-4f24-41e1-a249-098c62df5aff_Group+46+(1).avif"
+                alt=""
+              /><video
+                autoplay
+                loop
+                muted
+                src="/video/Website-homepage-Work-02_1.mp4"
+              ></video>
+            </div>
+            <div class="elem">
+              <img
+                src="/img/e0350a3d-c390-4d97-af1a-5c86bc822b52_Group+3929.avif"
+                alt=""
+              /><video
+                autoplay
+                loop
+                muted
+                src="/video/Website-homepage-Work-03_1.mp4"
+              ></video>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div id="page-4">
+        <div id="page4-part1">
+          <div id="page4-top">
+            <h2>
+              We operate on a simple philosophy:<br />Quality over quantity.
+            </h2>
+          </div>
+          <div id="page4-bottom">
+            <h4>
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;We collaborate
+              with five clients each year. This allows for intense focus on the
+              transformation and launch of your brand by our very best team,
+              which is the only team we have. <br /><br />
+            </h4>
+          </div>
+        </div>
+        <video src="/video/RJ-BALL-BLUE-ORANGE-scaled.webm"></video>
+        <div id="page4-part2">
+          <div id="page4-top">
+            <h2>Strategy &amp; emotion.<br />You need both.</h2>
+          </div>
+          <div id="page4-bottom">
+            <h4>
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Data matters, yet
+              it's the emotion that drives buying decisions. We don't believe in
+              'one size fits all.' Instead, we collaborate closely with our
+              clients to craft unique brand experiences that deeply resonate
+              with their audiences and boost their KPIs. 90% come back for a
+              second project.<br /><br />
+            </h4>
+          </div>
+        </div>
+      </div>
+      <div id="page-5">
+        <h1>Get in touch.</h1>
+        <div id="newswiper">
+          <div class="swiper mySwiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <img
+                  src="/img/57ac2830-96e7-4174-a104-b384126bf98c_fec955552eb681ff6c273774515e6c2e.avif"
+                  alt=""
+                />
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="/img/8059f4af-8ba3-4e5f-a14b-ba5ed760963f_Mask+group+(39).avif"
+                  alt=""
+                />
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="/img/a19d8427-5008-4dce-afa4-5d66118a0463_d7a851a9d8e2eb36cf93ffe4a6fa3701.avif"
+                  alt=""
+                />
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="/img/d3289122-3f25-43f3-b140-11a342a484d7_Mask+group+(38).avif"
+                  alt=""
+                />
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="/img/d8e1fa1f-4f24-41e1-a249-098c62df5aff_Group+46+(1).avif"
+                  alt=""
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
       <div id="hamburger">
         <div id="hamburger-main"></div>
       </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
       integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
