--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Home | REJOUICE®</title>
 
     <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
+    <link
       rel="shortcut icon"
       href="/img/favicon-32x32.png"
       type="image/x-icon"
@@ -22,6 +26,11 @@
   </head>
 
   <body>
+    <div id="loader">
+      <h3>Tomorrow's</h3>
+      <h3>Brands,</h3>
+      <h3>Today™</h3>
+    </div>
     <div id="main">
       <div id="page-1">
         <div id="cursor"><h5>Play Reel</h5></div>
@@ -37,7 +46,14 @@
             <h4>Menu</h4>
           </nav>
           <div id="page-1heading">
-            <h1>rejouice</h1>
+            <span>r</span>
+            <span>e</span>
+            <span>j</span>
+            <span>o</span>
+            <span>u</span>
+            <span>i</span>
+            <span>c</span>
+            <span>e</span>
           </div>
         </div>
       </div>
@@ -62,14 +78,21 @@
       </div>
       <div id="page-3">
         <div id="page3-top">
-          <h4>Agency & Venture <span>Models</span> &nbsp; &nbsp;↴</h4>
+          <h4>
+            Agency & Venture <span>Models</span> &nbsp;<i
+              class="ri-corner-right-down-line"
+            ></i>
+          </h4>
           <h2>Explore our services</h2>
           <h2>and engagement models</h2>
         </div>
         <div id="page3-bottom">
           <div id="p3-top">
             <h2>Transforming visions into brands.</h2>
-            <h2>↳ &nbsp; &nbsp; See the work</h2>
+            <h2>
+              <i class="ri-corner-down-right-line"></i>&nbsp; &nbsp; See the
+              work
+            </h2>
           </div>
           <div id="p3-bottom">
             <div class="elem">
@@ -179,7 +202,12 @@
             </div>
           </div>
         </div>
+        <div id="p5-bottom">
+          <h4>We’re uniquely built</h4>
+          <h2>Meet your team</h2>
+        </div>
       </div>
+      <div id="page-6"></div>
       <div id="hamburger">
         <div id="hamburger-main"></div>
       </div>
