--- a/index.html
+++ b/index.html
@@ -147,7 +147,38 @@
             </h4>
           </div>
         </div>
-        <video src="/video/RJ-BALL-BLUE-ORANGE-scaled.webm"></video>
+        <div id="video">
+          <video src="/video/RJ-BALL-BLUE-ORANGE-scaled.webm"></video>
+          <svg
+            class="abs tl:0 fit transform rotate:-90deg"
+            viewBox="0 0 100 100"
+          >
+            <circle
+              cx="50"
+              cy="50"
+              r="49"
+              stroke="#fff"
+              stroke-width="0.25"
+              fill="none"
+              class="o:0.3 $$2$$ $$3$$ $$4$$ (.in-view):tween:all,2.8s,easeOutSlow dasharray:308 dashoffset:616 (.in-view):dashoffset:554.4"
+            ></circle>
+            <circle
+              cx="50"
+              cy="50"
+              r="49"
+              stroke="#fff"
+              stroke-width="0.25"
+              fill="none"
+              class="$$5$$ $$6$$ $$7$$ (.in-view):tween:all,2.8s,easeOutSlow dasharray:308 dashoffset:308 (.in-view):dashoffset:246.4"
+            ></circle>
+          </svg>
+          <svg
+            class="abs tl:0 fit transform rotate:0 $$8$$ (.in-view):tween:all,2.8s,easeOutSlow (.in-view):rotate:72deg"
+            viewBox="0 0 100 100"
+          >
+            <circle cx="50" cy="1" r="1" fill="#fff"></circle>
+          </svg>
+        </div>
         <div id="page4-part2">
           <div id="page4-top">
             <h2>Strategy &amp; emotion.<br />You need both.</h2>
@@ -207,7 +238,34 @@
           <h2>Meet your team</h2>
         </div>
       </div>
-      <div id="page-6"></div>
+      <div id="page-6">
+        <div id="p6-1">
+          <div id="p6-11">
+            <h2>Relax. We've got you.</h2>
+            <button>Take a seat</button>
+          </div>
+          <div id="p6-12">
+            <h4>Home</h4>
+            <h4>Work</h4>
+            <h4>About</h4>
+            <h4>Service & Models</h4>
+            <h4>Contact</h4>
+          </div>
+          <div id="p6-13">
+            <h4>X<i class="ri-arrow-right-up-line"></i></h4>
+            <h4>Instagram<i class="ri-arrow-right-up-line"></i></h4>
+            <h4>Linkedin<i class="ri-arrow-right-up-line"></i></h4>
+          </div>
+        </div>
+        <div id="p6-2">
+          <div id="p6-21">
+            <h3>San Diego—California <br />Paris—France</h3>
+          </div>
+          <div id="p6-22"><h3>biz@rejouice.com</h3></div>
+          <div id="p6-23"><h3>©2023 legal</h3></div>
+        </div>
+        <div id="p6-3"><h1>rejouice</h1></div>
+      </div>
       <div id="hamburger">
         <div id="hamburger-main"></div>
       </div>
